force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>Cost</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>