force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>60</length>
    <type>Text</type>
</CustomField>