force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Edit_POLI_Description__c.field-meta.xml
<CustomField>
    <fullName>Edit_POLI_Description__c</fullName>
    <description>This field is used to Edit the POLI record</description>
    <formula>&#39;Edit/Delete: &#39; + Description__c + &#39;; Quantity:&#39; +  TEXT(Quantity__c) + &#39;; Cost:&#39;+ TEXT(Cost__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edit POLI Description</label>
    <type>Text</type>
</CustomField>