force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Purchase Order Line Items</relationshipLabel>
    <relationshipName>Purchase_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>