force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/POLI_Number__c.field-meta.xml
<CustomField>
    <fullName>POLI_Number__c</fullName>
    <formula>VALUE(RIGHT(Name, 5))</formula>
    <label>POLI Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>