force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total__c</fullName>
    <formula>Cost__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>