force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Supplier_Code__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Code__c</fullName>
    <label>Supplier Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>