force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <label>Tax Rate</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>