force-app/main/default/objects/Purchase_Order_Line_Item__c/recordTypes/InternalGroupLabour_PurchaseOrderLineItem_RT.recordType-meta.xml
<RecordType>
    <fullName>InternalGroupLabour_PurchaseOrderLineItem_RT</fullName>
    <active>true</active>
    <label>Internal Group Labour</label>
</RecordType>