force-app/main/default/objects/Purchase_Order_Line_Item__c/recordTypes/Supplier_PurchaseOrderLineItem_RT.recordType-meta.xml
<RecordType>
    <fullName>Supplier_PurchaseOrderLineItem_RT</fullName>
    <active>true</active>
    <label>Supplier</label>
</RecordType>